dataset1235/2025-2/1153765216/users/3700556413/executions/2747719322_3691284457.log
== RUN (2025-08-21 18:29:42)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:31:00)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:30:59)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:30:13)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:31:00)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:34)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:40)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:29:12)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:31:18)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4*peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:28:45)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:42)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:41)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:31:01)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:30:53)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:15)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:30:54)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
nota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.64
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.9
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.3
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 4.1
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 18.4
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: informe o valor de uma nota: 5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:28:54)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:28:55)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4
media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:28:08)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))
peso1 =1
peso2 = 2
peso3 = 3
peso4 = 4
media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 9
    media = (nota1*peso1)+(nota2*peso2)+(nota3*peso3)+(nota4+peso4))/10
                                                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:29:32)
-- CODE: 
nota1 = float(input("informe o valor de uma nota: "))
nota2 = float(input("informe o valor de uma nota: "))
nota3 = float(input("informe o valor de uma nota: "))
mota4 = float(input("informe o valor de uma nota: "))

peso1 = 1
peso2 = 2
peso3 = 3
peso4 = 4

media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    media = ((nota1*peso1) +(nota2*peso2) +(nota3*peso3) +(nota4+peso4))/10
                                                           ^^^^^
NameError: name 'nota4' is not defined. Did you mean: 'nota1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
